<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="amqo.com.privaliatmdb.views.popular.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/search_title"
        app:showAsAction="always"
        android:icon="@drawable/ic_search" />
</menu>
